--- a/04_Dye/tempo-plot-demo-saa-2017.html
+++ b/04_Dye/tempo-plot-demo-saa-2017.html
@@ -352,15 +352,13 @@ names(mcmc) &lt;- make.names(names(mcmc))</code></pre>
 ## [1] ggplot2_2.2.1
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] Rcpp_0.12.10        digest_0.6.12       rprojroot_1.2      
-##  [4] assertthat_0.1      plyr_1.8.4          grid_3.3.3         
-##  [7] R6_2.2.0            gtable_0.2.0        backports_1.0.5    
-## [10] magrittr_1.5        scales_0.4.1        evaluate_0.10      
-## [13] stringi_1.1.2       lazyeval_0.2.0.9000 rmarkdown_1.4      
-## [16] labeling_0.3        tools_3.3.3         stringr_1.2.0      
-## [19] readr_1.1.0         munsell_0.4.3       hms_0.3            
-## [22] yaml_2.1.14         colorspace_1.3-2    htmltools_0.3.5    
-## [25] knitr_1.15.1        tibble_1.2</code></pre>
+##  [1] Rcpp_0.12.10     digest_0.6.12    rprojroot_1.2    assertthat_0.1  
+##  [5] plyr_1.8.4       grid_3.3.3       R6_2.2.0         gtable_0.2.0    
+##  [9] backports_1.0.5  magrittr_1.5     scales_0.4.1     evaluate_0.10   
+## [13] stringi_1.1.3    lazyeval_0.2.0   rmarkdown_1.4    labeling_0.3    
+## [17] tools_3.3.3      stringr_1.2.0    readr_1.1.0      munsell_0.4.3   
+## [21] hms_0.3          yaml_2.1.14      colorspace_1.3-2 htmltools_0.3.5 
+## [25] knitr_1.15.17    tibble_1.2</code></pre>
 </div>
 
 
